@@ -1,5 +1,5 @@
 /*
- * Copyright 2017 Crown Copyright
+ * Copyright 2016-2025 Crown Copyright
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -12,19 +12,19 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- *
  */
 
 package stroom.pipeline.xmlschema;
 
+import stroom.security.api.SecurityContext;
 import stroom.util.entityevent.EntityEvent;
 import stroom.util.entityevent.EntityEventHandler;
+import stroom.util.logging.LambdaLogger;
+import stroom.util.logging.LambdaLoggerFactory;
 import stroom.xmlschema.shared.XmlSchemaDoc;
 
 import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
 import java.util.Collections;
@@ -37,15 +37,18 @@ import java.util.concurrent.ConcurrentHashMap;
 @EntityEventHandler(type = XmlSchemaDoc.TYPE)
 public class XmlSchemaCache implements EntityEvent.Handler {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(XmlSchemaCache.class);
+    private static final LambdaLogger LOGGER = LambdaLoggerFactory.getLogger(XmlSchemaCache.class);
 
     private final XmlSchemaStore xmlSchemaStore;
     private final List<ClearHandler> clearHandlers = new ArrayList<>();
     private final Map<FindXMLSchemaCriteria, SchemaSet> schemaSets = new ConcurrentHashMap<>();
+    private final SecurityContext securityContext;
 
     @Inject
-    public XmlSchemaCache(final XmlSchemaStore xmlSchemaStore) {
+    public XmlSchemaCache(final XmlSchemaStore xmlSchemaStore,
+                          final SecurityContext securityContext) {
         this.xmlSchemaStore = xmlSchemaStore;
+        this.securityContext = securityContext;
     }
 
     /**
@@ -70,66 +73,68 @@ public class XmlSchemaCache implements EntityEvent.Handler {
     }
 
     public SchemaSet getSchemaSet(final FindXMLSchemaCriteria criteria) {
-        SchemaSet schemaSet = schemaSets.get(criteria);
-        if (schemaSet == null) {
-            try {
-                final Map<String, List<XmlSchemaDoc>> schemaNameMap = new HashMap<>();
-                final Map<String, List<XmlSchemaDoc>> schemaNamespaceURIMap = new HashMap<>();
-                final Map<String, List<XmlSchemaDoc>> schemaSystemIdMap = new HashMap<>();
-                final List<String> systemIdList = new ArrayList<>();
+        return securityContext.asProcessingUserResult(() -> {
+            SchemaSet schemaSet = schemaSets.get(criteria);
+            if (schemaSet == null) {
+                try {
+                    final Map<String, List<XmlSchemaDoc>> schemaNameMap = new HashMap<>();
+                    final Map<String, List<XmlSchemaDoc>> schemaNamespaceURIMap = new HashMap<>();
+                    final Map<String, List<XmlSchemaDoc>> schemaSystemIdMap = new HashMap<>();
+                    final List<String> systemIdList = new ArrayList<>();
 
-                // Get a list of matching schemas.
-                final List<XmlSchemaDoc> schemas = xmlSchemaStore.find(criteria).getValues();
-                schemas.forEach(schema -> {
-                    addToMap(schemaNameMap, schema.getName(), schema);
-                    addToMap(schemaNamespaceURIMap, schema.getNamespaceURI(), schema);
-                    addToMap(schemaSystemIdMap, schema.getSystemId(), schema);
+                    // Get a list of matching schemas.
+                    final List<XmlSchemaDoc> schemas = xmlSchemaStore.find(criteria).getValues();
+                    schemas.forEach(schema -> {
+                        addToMap(schemaNameMap, schema.getName(), schema);
+                        addToMap(schemaNamespaceURIMap, schema.getNamespaceURI(), schema);
+                        addToMap(schemaSystemIdMap, schema.getSystemId(), schema);
 
-                    if (schema.getSystemId() != null) {
-                        final String systemId = schema.getSystemId().trim();
-                        if (systemId.length() > 0) {
-                            systemIdList.add(systemId);
+                        if (schema.getSystemId() != null) {
+                            final String systemId = schema.getSystemId().trim();
+                            if (!systemId.isEmpty()) {
+                                systemIdList.add(systemId);
+                            }
+                        }
+                    });
+
+                    // Create location string.
+                    Collections.sort(systemIdList);
+                    final StringBuilder sb = new StringBuilder();
+                    for (final String systemId : systemIdList) {
+                        sb.append(systemId);
+                        sb.append("\n");
+                    }
+                    if (!sb.isEmpty()) {
+                        sb.setLength(sb.length() - 1);
+                    }
+                    final String locations = sb.toString();
+
+                    schemaSet = new SchemaSet(schemaNameMap, schemaNamespaceURIMap, schemaSystemIdMap, locations);
+
+                    // Cache this info for future use.
+
+                    // There was a memory leak in XMLSchemaCache due
+                    // to schema criteria map keys not implementing equals properly.
+                    // This has been fixed but has highlighted the issue that a
+                    // proper cache should be used instead of a map to allow
+                    // this to scale better.
+                    schemaSets.put(criteria, schemaSet);
+
+                    if (schemaSets.size() > 100) {
+                        LOGGER.error("Too many schema sets.");
+
+                        while (schemaSets.size() > 50) {
+                            schemaSets.remove(schemaSets.keySet().iterator().next());
                         }
                     }
-                });
 
-                // Create location string.
-                Collections.sort(systemIdList);
-                final StringBuilder sb = new StringBuilder();
-                for (final String systemId : systemIdList) {
-                    sb.append(systemId);
-                    sb.append("\n");
+                } catch (final RuntimeException e) {
+                    LOGGER.error("Unable to get schema set!", e);
                 }
-                if (sb.length() > 0) {
-                    sb.setLength(sb.length() - 1);
-                }
-                final String locations = sb.toString();
-
-                schemaSet = new SchemaSet(schemaNameMap, schemaNamespaceURIMap, schemaSystemIdMap, locations);
-
-                // Cache this info for future use.
-
-                // There was a memory leak in XMLSchemaCache due
-                // to schema criteria map keys not implementing equals properly.
-                // This has been fixed but has highlighted the issue that a
-                // proper cache should be used instead of a map to allow
-                // this to scale better.
-                schemaSets.put(criteria, schemaSet);
-
-                if (schemaSets.size() > 100) {
-                    LOGGER.error("Too many schema sets.");
-
-                    while (schemaSets.size() > 50) {
-                        schemaSets.remove(schemaSets.keySet().iterator().next());
-                    }
-                }
-
-            } catch (final RuntimeException e) {
-                LOGGER.error("Unable to get schema set!", e);
             }
-        }
 
-        return schemaSet;
+            return schemaSet;
+        });
     }
 
     private void addToMap(final Map<String, List<XmlSchemaDoc>> map, final String name, final XmlSchemaDoc xmlSchema) {
@@ -180,14 +185,14 @@ public class XmlSchemaCache implements EntityEvent.Handler {
         public XmlSchemaDoc getBestMatch(final String systemId, final String namespaceURI) {
             // Try and find a matching schema by system id.
             List<XmlSchemaDoc> matches = schemaSystemIdMap.get(systemId);
-            if (matches != null && matches.size() > 0) {
-                return matches.get(0);
+            if (matches != null && !matches.isEmpty()) {
+                return matches.getFirst();
             }
 
             // If not found try and match with namespace URI.
             matches = schemaNamespaceURIMap.get(namespaceURI);
-            if (matches != null && matches.size() > 0) {
-                return matches.get(0);
+            if (matches != null && !matches.isEmpty()) {
+                return matches.getFirst();
             }
 
             return null;
