@@ -1,6 +1,21 @@
+/*
+ * Copyright 2016-2025 Crown Copyright
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 package stroom.query.language.functions;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -8,18 +23,10 @@ import java.nio.charset.StandardCharsets;
 class EncodingUtil {
 
     static String encodeUrl(final String string) {
-        try {
-            return URLEncoder.encode(string, StandardCharsets.UTF_8.name());
-        } catch (final UnsupportedEncodingException ex) {
-            throw new RuntimeException("Unable to find UTF-8 Character encoding", ex);
-        }
+        return URLEncoder.encode(string, StandardCharsets.UTF_8);
     }
 
     static String decodeUrl(final String string) {
-        try {
-            return URLDecoder.decode(string, StandardCharsets.UTF_8.name());
-        } catch (final UnsupportedEncodingException ex) {
-            throw new RuntimeException("Unable to find UTF-8 Character encoding", ex);
-        }
+        return URLDecoder.decode(string, StandardCharsets.UTF_8);
     }
 }
