@@ -1,3 +1,19 @@
+/*
+ * Copyright 2016-2025 Crown Copyright
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 package stroom.query.language.functions;
 
 import org.assertj.core.api.Assertions;
@@ -64,7 +80,6 @@ class TestAlphaNumericComparator {
         doTestContract("A", "b", "C");
         doTestContract("10", "10-1", "2");
         doTestContract("3232235777", "3232238337-3232239362", "4");
-        doTestContract("a", "b", null);
     }
 
     private void doTestContract(final List<ValString> vals) {
@@ -87,7 +102,7 @@ class TestAlphaNumericComparator {
                                 vals.get(j),
                                 vals.get(k))
                                 .sorted(comparator)
-                                .collect(Collectors.toList());
+                                .toList();
 
                         // Now see if the trio meet the transitive contract
                         doTestContract(
